--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ h1, h3 {
     border: 1px solid gray;
     padding: 1rem;
 }
+#goal-detail-view td, tr {
+    text-align: center;
+    vertical-align: middle;
+    height: 2rem;
+}
 td, tr {
     text-align: center;
     vertical-align: middle;
